--- a/img/index.html
+++ b/img/index.html
@@ -12,9 +12,9 @@
   <body>
       
 
-    <h1>Schoolreis naar </h1>
+    <h1>Schoolreis naar india</h1>
 
-    <p>welkom op onze site voor onze reis naar </p>
+    <p>welkom op onze site voor onze reis naar india</p>
 
 
 
