--- a/img/index.html
+++ b/img/index.html
@@ -15,7 +15,12 @@
     <h1>Schoolreis naar india</h1>
 
     <p>welkom op onze site voor onze reis naar india</p>
-
+    <p>onderdelen van de reis</p>
+    <ul>
+      <li>Mumbai</li>
+      <li>New Delhi</li>
+      <li>Calcutta</li>
+    </ul>
 
 
     <!-- Optional JavaScript -->
