--- a/img/index.html
+++ b/img/index.html
@@ -15,6 +15,7 @@
     <h1>Schoolreis naar bali</h1>
 
     <p>welkom op onze site voor onze reis naar bali</p>
+   <p>wie ziet er dat niet zitten een strand vakantie?</p>
 
 
 
