--- a/img/index.html
+++ b/img/index.html
@@ -22,6 +22,8 @@
       <li>Calcutta</li>
     </ul>
 
+    <p>Bedankt voor uw bezoek</p>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
